--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
   <h1>1989:La naissance de Web</h1>
   <p><b>Internet</b> est une infrastructure de réseau munie de moyens de transmission et de moyens logiciels permettant à des machines de communiquer entre elles.</p>
   <p>Les trois caractéristiques essentielles Web</p>
-  <dl></dl>
+<dl>
+        <dt>Le <b>protocole HTTP</b></dt>
+    <dd> est l'ensemble des règles permettant de transférer des fichiers tels que du texte, des images, du son, de la vidéo et d'autres fichiers multimédias sur le Web</dd>
+        <dt>Le <b>langage HTML</b></dt>
+    <dd>est le langage utilisé pour structurer une page web et son conten</dd>
+        <dt>Le <b>système URL</b>
+    <dd>est simplement l'adresse d'une ressource donnée, unique sur le Web.</dd>
+  </dl>
   
 </html>
