--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <h1>1989:La naissance de Web</h1>
+  <h1><center>1989:La naissance de Web</center></h1>
   <p><b>Internet</b> est une infrastructure de réseau munie de moyens de transmission et de moyens logiciels permettant à des machines de communiquer entre elles.</p>
   <p>Les trois caractéristiques essentielles Web</p>
 <dl>
